--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular": "^1.6.6",
     "angular-animate": "^1.6.6",
     "angular-aria": "^1.6.6",
+    "angular-loading-bar": "^0.9.0",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
     "angular-route": "^1.6.6",
