--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
     "angular-route": "^1.6.6",
-    "jquery": "^3.2.1"
+    "jquery": "^1.11.1",
+    "threesixty-slider": "^2.0.6"
   }
 }
