--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stroller-explorer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "AngularJS-based web explorer for stroller images",
   "repository": "https://github.com/bartekzawadka/stroller-explorer",
   "license": "MIT",
@@ -8,6 +8,7 @@
     "angular": "^1.6.6",
     "angular-animate": "^1.6.6",
     "angular-aria": "^1.6.6",
+    "angular-file-saver": "^1.1.3",
     "angular-loading-bar": "^0.9.0",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
